--- a/index.html
+++ b/index.html
@@ -1,144 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+	<link rel="stylesheet" type="text/css" href="estilo.css">
     <title>Document</title>
 </head>
 
 <style>
-    #barraNav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Navbar links */
-#barraNav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
-/* Page content */
-.content {
-  padding: 16px;
-}
-
-/* The sticky class is added to the navbar with JS when it reaches its scroll position */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
-}
-
-#intro{
-    font-family: 'Courier New', Courier, monospace;
-}
-
-
-
-
-* {
-  box-sizing: border-box;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container {
-  position: relative;
-  height: 800px;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-  height: 400px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-
+    
 
 
 
@@ -148,8 +18,8 @@
 
 <!-- Barra de navegacion-->
     <div id="barraNav">
-        <a href="index.html">Home</a>
-        <a href="index2.html">Huamantla</a>
+        <a href="#home">Home</a>
+        <a href="#huama">Huamantla</a>
         <a href="#ixte">Ixtenco</a>
         <a href="#Tlaxc">Tlaxco</a>
     </div>
@@ -172,32 +42,32 @@
   <!-- Full-width images with number text -->
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
-      <img src="img/atractivo/Barca_de_la_fé.webp" style="width:100%" height="400px">
+      <img src="img/atractivo/Barca_de_la_fé.jpg"  >
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
-      <img src="img/atractivo/BASILICA_OCOTLAN_md-ok.webp" style="width:100%" height="400px">
+      <img src="img/atractivo/BASILICA_OCOTLAN_md-ok.jpg ">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
-      <img src="img/atractivo/KOGPBFTEZ5BUVA4J4SOU5ZDYL4.avif" style="width:100%" height="400px">
+      <img src="img/atractivo/KOGPBFTEZ5BUVA4J4SOU5ZDYL4.jpg">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
-      <img src="img/atractivo/MVVSXJILN5E6XGMXEWYCMQM6SI.jpg" style="width:100%" height="400px">
+      <img src="img/atractivo/MVVSXJILN5E6XGMXEWYCMQM6SI.jpg" >
   </div>
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-      <img src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.avif" style="width:100%" height="400px">
+      <img src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" >
   </div>
 
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
-      <img src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.avif" style="width:100%" height="400px">
+      <img src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" >
   </div>
 
   <!-- Next and previous buttons -->
@@ -208,29 +78,29 @@
   <div class="caption-container">
     <p id="caption"></p>
   </div>
-</div>
+
   <!-- Thumbnail images -->
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="img/atractivo/Barca_de_la_fé.webp" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="img/atractivo/Barca_de_la_fé.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/atractivo/BASILICA_OCOTLAN_md-ok.webp" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="img/atractivo/BASILICA_OCOTLAN_md-ok.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/atractivo/KOGPBFTEZ5BUVA4J4SOU5ZDYL4.avif" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="img/atractivo/KOGPBFTEZ5BUVA4J4SOU5ZDYL4.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
     </div>
     <div class="column">
       <img class="demo cursor" src="img/atractivo/MVVSXJILN5E6XGMXEWYCMQM6SI.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.avif" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.avif" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
     </div>
   </div>
-
+</div>
 
 
   <br><br><br>
