--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
+  <link rel="stylesheet" href="reset.css">
     <title>Document</title>
 </head>
 
@@ -19,7 +20,7 @@
 <!-- Barra de navegacion-->
     <div id="barraNav">
         <a href="#home">Home</a>
-        <a href="#huama">Huamantla</a>
+        <a href="index2.html">Huamantla</a>
         <a href="#ixte">Ixtenco</a>
         <a href="#Tlaxc">Tlaxco</a>
     </div>
