ayuda me estabn embargando la casa aparte agrege 2 eiquetas para que la iamgen este a los lados, son a y a1 ademas de la etiqueta section para la info jeje  centre y agrege un video del yutu

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         <a href="#Tlaxc">Tlaxco</a>
     </div>
 <!--Introduccion-->
-    <br><br><br>
+
+<div id="a"></div>
+<div id="a1" ></div>
+<section>
+    <br><br><br><br>
 
     <p id="intro">
         <img src="img/tlax.webp" width="20%" align="left"></img>
-        La Zona Metropolitana de Puebla-Tlaxcala es un área metropolitana de México ubicada en el centro del estado de Puebla y el sur del estado de Tlaxcala.​ Esta zona metropolitana es la cuarta más poblada de México, después de las aglomeraciones urbanas del Valle de México, Monterrey y Guadalajara.
-        La zona metropolitana de Puebla-Tlaxcala aglutina un total de 38 municipios poblanos y tlaxcaltecas ubicados en el Valle de Puebla-Tlaxcala. La definición oficial de esta metrópolis mexicana es adoptada por el Consejo Nacional de Población (Conapo) y el Instituto Nacional de Estadística, Geografía e Informática (INEGI) de México.
+        La Zona Metropolitana de Puebla-Tlaxcala es un área metropolitana de México ubicada en el centro del estado de Puebla y el sur del estado de Tlaxcala.<br><br>Esta zona metropolitana es la cuarta más poblada de México, después de las aglomeraciones urbanas del Valle de México, Monterrey y Guadalajara.<br>
+        La zona metropolitana de Puebla-Tlaxcala aglutina un total de 38 municipios poblanos y tlaxcaltecas ubicados en el Valle de Puebla-Tlaxcala. <br>La definición oficial de esta metrópolis mexicana es adoptada por el Consejo Nacional de Población (Conapo) y el Instituto Nacional de Estadística, Geografía e Informática (INEGI) de México.
     </p>
 
     <br><br><br>
@@ -38,10 +42,11 @@
    
 <!-- Presentacion de imagenes nopor-->
     <!-- Container for the image gallery -->
-<div class="container">
+  
+<div class="container" >
 
   <!-- Full-width images with number text -->
-  <div class="mySlides">
+  <div class="mySlides" >
     <div class="numbertext">1 / 6</div>
       <img src="img/atractivo/Barca_de_la_fé.jpg"  >
   </div>
@@ -71,10 +76,15 @@
       <img src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" >
   </div>
 
+
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+<!-- video de yutu -->
+ <br><br>
+<center>
+<iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/metm30NpQNw?si=Rf_e4FqxwBPU5PHn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
   <!-- Image text -->
   <div class="caption-container">
     <p id="caption"></p>
@@ -105,6 +115,7 @@
 
 
   <br><br><br>
+</section>
 
 
 
