--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#home">Home</a>
         <a href="index2.html">Huamantla</a>
         <a href="#ixte">Ixtenco</a>
-        <a href="#Tlaxc">Tlaxco</a>
+        <a href="tlaxco.html">Tlaxco</a>
     </div>
 <!--Introduccion-->
 
