--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
         <a href="index.html">Home</a>
         <a href="index2.html">Huamantla</a>
         <a href="#ixte">Ixtenco</a>
-        <a href="#Tlaxc">Tlaxco</a>
+        <a href="tlaxco.html">Tlaxco</a>
     </div>
 <!--Introduccion-->
   
@@ -118,7 +118,12 @@
               </td>
             </tr>
           </table>
-        
-        <script src="banner.js"></script>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+         
+          <h1 id="ver1" >Como llegar?</h1>
+          <center>
+          <iframe id="mapa1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30121.066956135266!2d-97.94904549775782!3d19.320018142982256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cffb8a3dc6391d%3A0x4c4af94003197a37!2sHuamantla%2C%20Tlax.!5e0!3m2!1ses-419!2smx!4v1717986508529!5m2!1ses-419!2smx"  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </center>
+          <script src="banner.js"></script>
 </body>
 </html>
