--- a/tlaxco.html
+++ b/tlaxco.html
@@ -52,7 +52,7 @@
         <a href="index.html">Home</a>
         <a href="index2.html">Huamantla</a>
         <a href="#ixte">Ixtenco</a>
-        <a href="#Tlaxc">Tlaxco</a>
+        <a href="tlaxco.html">Tlaxco</a>
     </div>
 <!--Introduccion-->
   
@@ -120,7 +120,7 @@
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
          
             <h1 id="ver1" >Como llegar?</h1>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60132.450135724066!2d-98.16518163737861!3d19.615403468065974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d017ce02b008e9%3A0x4a86f3ef164be249!2sTlaxco%2C%20Tlax.!5e0!3m2!1ses!2smx!4v1717983832528!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60132.450135724066!2d-98.16518163737861!3d19.615403468065974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d017ce02b008e9%3A0x4a86f3ef164be249!2sTlaxco%2C%20Tlax.!5e0!3m2!1ses!2smx!4v1717983832528!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </center>
         <script src="banner.js"></script>
 </body>
