--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <title>Document</title>
 </head>
 
-<style>
-    
-
-
-
-</style>
-
 <body>
 <h1>ora si pionches putos</h1>
 <h1>orale derio echale gana aaas</h1>
@@ -23,7 +16,7 @@
     <div id="barraNav">
         <a href="#home">Home</a>
         <a href="index2.html">Huamantla</a>
-        <a href="#ixte">Ixtenco</a>
+        <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
     </div>
 <!--Introduccion-->
