--- a/index2.html
+++ b/index2.html
@@ -6,44 +6,7 @@
     <link rel="stylesheet" type="text/css" href="estilo2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huamantla</title>
-    <style>
 
-         /*   #barraNav {
-  overflow: hidden;
-  background-color: #333;
-  
-}
-        /* Navbar links 
-#barraNav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
-.banner{
-    width: 100%;
-    height: 50%;
-    
-}
-.titulo{
-    text-align: center;
-    font-size: 2em;
-    margin: 0 0 1em ;
-    clear: left;
-}
-.imagen1{
-    width: 320px;
-    float:left;
-    margin: 0px 50px 20px 200px;
-    transition: 400ms;
-    box-shadow: 10px 10px 30px 15px #000000;
-}
-<img id="banner" src="img/peublos/huaman/huamantla1.jpg" width="100%" height="500px">
-*/ 
- </style>
 </head>
 <body>
     
@@ -51,7 +14,7 @@
     <div id="barraNav">
         <a href="index.html">Home</a>
         <a href="index2.html">Huamantla</a>
-        <a href="#ixte">Ixtenco</a>
+        <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
     </div>
 <!--Introduccion-->
