--- a/ixtenco.html
+++ b/ixtenco.html
@@ -64,15 +64,32 @@
                 </div>
               </td>
 
+              <h1 id="ver">lista de lugares atractivos</h1>
+          <p id="txt" >
+            Acampado en el Cerro Xalapasco<br>
+            Parque Nacional Malinche<br>
+            Haciendas<br>
+            Templo de San Juan Bautista<br>
+        </p>
               
-
             </tr>
           </table>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
          
             <h1 id="ver1" >Como llegar?</h1>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15066.891534003726!2d-97.90755240323483!3d19.250905369817186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cffa38785430cd%3A0xea338488942bbd8b!2sIxtenco%2C%20Tlaxcala!5e0!3m2!1sen!2smx!4v1717993706396!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <h1 id="ver1" >Donde hospedarse </h1>
+            <table class="caca">
+                <tr>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3765.2277485296563!2d-97.92490042506466!3d19.315921144397326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cffc8f2005a0e7%3A0x765730f5b124517e!2sHotel%20Centenario%20de%20Huamantla!5e0!3m2!1sen!2smx!4v1717998211043!5m2!1sen!2smx" width="320" height="240" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3765.3153364414393!2d-97.92477040321045!3d19.312118200000018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cffc8616414915%3A0xb5276d9019dde51e!2sHotel%20Azucena!5e0!3m2!1sen!2smx!4v1717998244882!5m2!1sen!2smx" width="320" height="240" style="border:10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3765.3153364414393!2d-97.92477040321045!3d19.312118200000018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cffc85da0a857f%3A0x49b90fbee46b1198!2sHotel%20Las%20Candelas!5e0!3m2!1sen!2smx!4v1717998258417!5m2!1sen!2smx" width="320" height="240" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+                </tr>
+            </table>
+
           </center>
+          <br><br><br><br>
         <script src="banner.js"></script>
 </body>
 </html>  
