--- a/zaca.html
+++ b/zaca.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" type="text/css" href="estilo4.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ixtenco</title>
+    <title>Zacatelco</title>
    
 </head>
 <body>
@@ -16,6 +16,7 @@
         <a href="index2.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
+        <a href="zaca.html">Zacatelco</a>
     </div>
 <!--Introduccion-->
   
@@ -23,9 +24,9 @@
 <div id="a"></div>
 <div id="a1" ></div>
 <div class="banner">
-    <img src="img/peublos/ixte/ixt1.webp" alt="Imagen 1">
-    <img src="img/peublos/ixte/ixt2.jpg" alt="Imagen 2">
-    <img src="img/peublos/ixte/ixt3.jpg" alt="Imagen 3">
+    <img src="img/peublos/zaca/zz1.webp" alt="Imagen 1">
+    <img src="img/peublos/zaca/zz12.webp" alt="Imagen 2">
+    <img src="img/peublos/zaca/zz123.webp" alt="Imagen 3">
   </div>
 
         <h1 class="titulo">Ixtenco</h1>
@@ -119,5 +120,4 @@
         </div>
     </div>
 </footer>
-
 </html>  
