mas y mas mejoras

--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
         <a href="index2.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
+        <a href="zaca.html">Zacatelco</a>
     </div>
     
     <!-- Introducción -->
