--- a/ixtenco.html
+++ b/ixtenco.html
@@ -16,6 +16,7 @@
         <a href="index2.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
+        <a href="zaca.html">Zacatelco</a>
     </div>
 <!--Introduccion-->
   
