--- a/tlaxco.html
+++ b/tlaxco.html
@@ -15,6 +15,7 @@
         <a href="index2.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
+        <a href="zaca.html">Zacatelco</a>
     </div>
 <!--Introduccion-->
   
