--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Barra de navegacion-->
     <div id="barraNav">
         <a href="#home">Home</a>
-        <a href="index2.html">Huamantla</a>
+        <a href="huama.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
         <a href="zaca.html">Zacatelco</a>
@@ -98,7 +98,6 @@
     <div class="column">
       <img class="demo cursor" src="img/atractivo/VW3AX2V6VJGBDPR3MZQN5HT3KM.jpg" style="width:100%" onclick="currentSlide(5)" alt="Cupulas iconicas">
     </div>
-    
   </div>
 </div>
 
