--- a/ixtenco.html
+++ b/ixtenco.html
@@ -13,7 +13,7 @@
     <!-- Barra de navegacion-->
     <div id="barraNav">
         <a href="index.html">Home</a>
-        <a href="index2.html">Huamantla</a>
+        <a href="huama.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
         <a href="zaca.html">Zacatelco</a>
