--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Barra de navegacion-->
     <div id="barraNav">
-        <a href="#home">Home</a>
+      <a href="index.html">Home</a>
         <a href="huama.html">Huamantla</a>
         <a href="ixtenco.html">Ixtenco</a>
         <a href="tlaxco.html">Tlaxco</a>
